[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-skill-radar"
version = "0.1.2"
description = "Rank fast-growing GitHub repositories related to Codex skills and plugins."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cettyTheDev" }]
keywords = ["codex", "skills", "plugins", "github", "open-source"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.scripts]
codex-skill-radar = "codex_skill_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
